[gd_scene load_steps=18 format=2]

[ext_resource path="res://SortMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Checkbox.png" type="Texture" id=2]
[ext_resource path="res://Assets/Check.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Darken:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Darken:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ -3, -240.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ -3, -240.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Darken:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ -240.0, -3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:margin_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ -240.0, -3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 4 )

[node name="SortMenu" type="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 200.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Darken" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1000.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Darken"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 6 )
anims/Open = SubResource( 7 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -240.0
margin_bottom = -240.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Button" parent="Background"]
anchor_bottom = 0.333
margin_left = 20.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = -5.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkbox" type="TextureRect" parent="Background/ItemName"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Check" type="TextureRect" parent="Background/ItemName"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="Background/ItemName"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
custom_fonts/font = SubResource( 13 )
text = "Item Name"
valign = 1

[node name="Tags" type="Button" parent="Background"]
anchor_top = 0.333
anchor_bottom = 0.666
margin_left = 20.0
margin_top = 13.0
margin_right = 60.0
margin_bottom = -13.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkbox" type="TextureRect" parent="Background/Tags"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Check" type="TextureRect" parent="Background/Tags"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="Background/Tags"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 10.0
custom_fonts/font = SubResource( 13 )
text = "Tags"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Darken/Close" to="." method="close"]
[connection signal="pressed" from="Background/ItemName" to="." method="emitModifiedSignal"]
[connection signal="pressed" from="Background/ItemName" to="." method="sortBy_itemName"]
[connection signal="pressed" from="Background/Tags" to="." method="sortBy_tags"]
[connection signal="pressed" from="Background/Tags" to="." method="emitModifiedSignal"]
